added github link

--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
             </div>
         </div>
     </div>
+     <footer title="my code on GitHub">
+    <a href="https://github.com/Neg04/Advanced-tools.git" target="_blank" class="text-decoration-none text-center d-block mt-4">My Source Code</a>
+    </footer>
+    <div class="d-flex justify-content-evenly">
+    <a href="index.html" class="text-decoration-none d-block d-sm-none">Go Up</a>
+    <a href="about.html" class="text-decoration-none d-block d-sm-none">About</a>
+   </div>
 </body>
 
 </html>
