--- a/about.html
+++ b/about.html
@@ -61,6 +61,14 @@
         <h2 class="pt-4 text-center">📮 Contact me</h2>
         <a href="mailto:[email]" class="email-link text-center d-block"> Neg.n04@gmail.com </a>
     </div>
+    <footer title="my code on GitHub">
+        <a href="https://github.com/Neg04/Advanced-tools.git" target="_blank" class="text-decoration-none text-center d-block mt-4">My
+            Source Code</a>
+    </footer>
+    <div class="d-flex justify-content-evenly">
+        <a href="index.html" class="text-decoration-none d-block d-sm-none">Homepage</a>
+        <a href="about.html" class="text-decoration-none d-block d-sm-none">go up</a>
+    </div>
 </body>
 
 </html>
